# new_emplyee_agent

./: .env  .env.example  .gitignore  PROJECT_GUIDE.md  README.md  demo_memory_management.py  demo_script.py  demo_tool_calling.py  dump.rdb  pyproject.toml  start_all.sh
.agent/rules/: code.md
.kilocode/: mcp.json
.kilocode/rules/: guide.md
demos/: README.md  demo_document_processing.py  demo_rag.py
document/: CORS-Fix-Summary.md  CORS-Issue-Resolution.md  CORS-Testing-Guide.md  Quick-Start-Guide.md  Sprint4-README.md  deepseek-integration.md  product_description  product_description.md  sprint4-memory-management-implementation.md
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
nexus_agent/: __init__.py
nexus_agent/agent/: __init__.py  agent.py  api_tools.py  middleware.py  prompts.py  rag_agent.py  retrievers.py  state.py  tools.py
nexus_agent/api/: config.py  dependencies.py  main.py
nexus_agent/config/: __init__.py  settings.py
nexus_agent/data/: mock_data.py
nexus_agent/rag/: __init__.py  document_loader.py  embeddings.py  indexing.py  retrieval.py  text_splitter.py  vector_store.py
nexus_agent/storage/: context_manager.py  (+2 more)
plans/: cors-fix-plan.md  langchain-1.0-syntax-guide.md  sprint1-prototype-plan.md  sprint2-rag-basics-plan.md  sprint3-tool-calling-plan.md  sprint4-memory-management-plan.md  sprint5-fastapi-plan.md  sprint6-frontend-development.md
scripts/: README.md  run_server.py  start_all.sh  start_dev.sh
test/: Sprint4-Test-Report.md  test_cors_configuration.sh  test_sprint4_memory_management.py
(+22 files in other folders)
